--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Thu Aug 09 10:27:19 CST 2012
-app.grails.version=2.0.3
+#Sun Aug 12 12:23:12 CST 2012
+app.grails.version=2.1.0
 app.name=facebookstream
 app.servlet.version=2.5
 app.version=0.1
+plugins.atmosphere=0.4.2.3
